Add StartEnd interface and generated implementation SampleStartEndDTO
