# sample-backend/src/main/java/org/wintersleep/openapi/crud/sample/web/CompanyController.java
@@ -5,7 +5,6 @@ import org.openapitools.model.*;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import org.wintersleep.openapi.crud.core.provider.OffsetLimit;
 import org.wintersleep.openapi.crud.core.provider.SortRequest;
 
 import java.util.List;
@@ -41,9 +40,9 @@ public class CompanyController implements CompaniesApi {
     @Override
     public ResponseEntity<List<CompanyDto>> listCompanies(List<Long> ids,
                                                           CompanyFilterDto filter, String search,
-                                                          CompanySortDto sort, SortOrder order,
-                                                          Long start, Long end) {
-        return dataProvider.list(ids, filter, search, SortRequest.of(sort, order), OffsetLimit.ofStartEnd(start, end));
+                                                          CompanySortDto sort, SampleSortOrder order,
+                                                          SampleStartEndDto startEnd) {
+        return dataProvider.list(ids, filter, search, SortRequest.of(sort, order), startEnd);
     }
 
     @Override
